# InflectNanoTTS.cpp

./: .gitignore  CMakeLists.txt  README.md
patches/ggml/: 0001-esp32-low-memory-support.patch
src/: acoustic_model.cpp  acoustic_model.h  griffin_lim_vocoder.cpp  griffin_lim_vocoder.h  inflect-nano.h  main.cpp  memory_trace.h  model_config.h  model_loader.cpp  model_loader.h  synthesizer.cpp  text_frontend.cpp  text_frontend.h  utils.h  vocoder_model.cpp  vocoder_model.h
tools/: analyze_q2_pair_sweep.py  build.sh  compare-dumps.py  compile_cmudict.py  convert.py  dump-golden.py  ggml_quantize_stdin.c  sweep_acoustic_q2_pairs.py  test_parity.py
